--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.24",
+    "axios": "^0.26.1",
+    "express-session": "^1.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
