--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@types/styled-components": "^5.1.24",
     "axios": "^0.26.1",
     "express-session": "^1.17.2",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
