--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/styled-components": "^5.1.24",
+    "apollo-boost": "^0.4.9",
+    "apollo-server": "^3.6.6",
     "axios": "^0.26.1",
     "express-session": "^1.17.2",
+    "graphql": "^16.3.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
