--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.2",
     "@reduxjs/toolkit": "^1.8.0",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "@types/styled-components": "^5.1.24",
     "apollo-boost": "^0.4.9",
     "apollo-server": "^3.6.6",
